Refactored the ability