@@ -1,15 +1,14 @@
 package com.carlettos.game.gameplay.ability.starting;
 
-import java.util.Arrays;
+import java.util.List;
 
 import com.carlettos.game.board.AbstractBoard;
 import com.carlettos.game.gameplay.ability.Ability;
 import com.carlettos.game.gameplay.ability.Info;
-import com.carlettos.game.gameplay.piece.Piece;
 import com.carlettos.game.util.Point;
 import com.carlettos.game.util.enums.Direction;
 
-public class AbilityRam extends Ability {
+public class AbilityRam extends Ability<Direction> {
     public static final int COST_PER_CHARGE = 5;
 
     public AbilityRam() {
@@ -17,13 +16,7 @@ public class AbilityRam extends Ability {
     }
 
     @Override
-    public boolean canUse(AbstractBoard board, Piece piece, Point start, Info info) {
-        if (!this.commonCanUse(board, piece) || !info.isType(Direction.class)) { return false; }
-        return (board.contains(((Direction) info.getValue()).toPoint()));
-    }
-
-    @Override
-    public void use(AbstractBoard board, Piece piece, Point start, Info info) {
+    public void use(AbstractBoard board, Point start, Info info) {
         Direction dir = (Direction) info.getValue();
         var route = board.rayCast(start, -1, false, dir, e -> e.hasPiece());
         var charge = route.size() / COST_PER_CHARGE + 1;
@@ -34,14 +27,23 @@ public class AbilityRam extends Ability {
             endCharge = killeable.get(killeable.size() - 1).getPos();
         }
         killeable.forEach(e -> board.remove(e, true));
-        board.set(endCharge, piece);
+        board.set(endCharge, board.getPiece(start));
         board.remove(start, false);
-        this.commonUse(board, piece);
+        this.commonUse(board, start);
+    }
+    
+    @Override
+    public boolean checkTypes(Info info) {
+        return info.isType(Direction.class);
     }
 
     @Override
-    public Direction[] getValues(AbstractBoard board, Point start) {
-        return Arrays.asList(Direction.values()).stream().filter(d -> board.contains(d.toPoint()))
-                .toArray(Direction[]::new);
+    public boolean reducedCanUse(AbstractBoard board, Point start, Direction info) {
+        return board.contains(info.toPoint());
+    }
+
+    @Override
+    public List<Direction> getInfos(AbstractBoard board) {
+        return List.of(Direction.values());
     }
 }
